# twitch-milestone-celebrator

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
src/twitch_milestone_celebrator/: __init__.py  __main__.py
src/twitch_milestone_celebrator/bot/: twitch_bot.py
src/twitch_milestone_celebrator/config/: settings.py
src/twitch_milestone_celebrator/ui/: window.py
src/twitch_milestone_celebrator/utils/: audio.py  logging.py  visuals.py
