[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "twitch-milestone-celebrator"
version = "0.1.0"
description = "A Twitch bot that celebrates chat milestones with visual and audio effects"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "CrownCore Studios", email = "crowncorestudios@gmail.com"}
]
maintainers = [
    {name = "CrownCore Studios", email = "crowncorestudios@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pygame>=2.5.2",
    "twitchio>=2.10.0",
    "python-dotenv>=1.0.0",
    "gtts>=2.5.1",
    "requests>=2.31.0",
    "pygame-gui>=0.6.9",
]

[project.urls]
"Homepage" = "https://github.com/CrownCoreStudios/twitch-milestone-celebrator"
"Bug Tracker" = "https://github.com/CrownCoreStudios/twitch-milestone-celebrator/issues"
"Source" = "https://github.com/CrownCoreStudios/twitch-milestone-celebrator"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
    "black==23.3.0",
    "isort==5.12.0",
    "mypy==1.3.0",
    "flake8==6.0.0",
]

[project.urls]
"Homepage" = "https://github.com/CrownCoreStudios/twitch-milestone-celebrator"
"Bug Tracker" = "https://github.com/CrownCoreStudios/twitch-milestone-celebrator/issues"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
